# log_analyse

./: README.md  config.yml  main.py  pyproject.toml  settings.py
config/: __init__.py  settings.py
src/: log_analysis.py  log_processor.py  utils.py
